fix line page alignment

--- a/client/src/style/style2.css
+++ b/client/src/style/style2.css
@@ -512,7 +512,7 @@ ul.list-s i {
     font-size: 12px;
     padding: 10px 10px;
     border-radius: 3px 3px 0px 0;
-    border-bottom: #398cf8 4px solid;
+    border-bottom: #ED254E 3px solid;
 }
 
 .widh-adf strong {
